--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.0",
     "express": "^4.13.3",
     "express-session": "^1.11.3",
+    "flash": "^1.1.0",
     "jade": "^1.11.0",
     "sequelize": "^3.9.0",
     "sequelize-cli": "^1.9.1",
