Finally catching everything in my version with the class version

--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "angular": "~1.4.5",
     "angular-messages": "~1.4.7",
+    "angular-mocks": "~1.4.7",
+    "angular-route": "~1.4.7",
     "bootstrap": "~3.3.5"
   }
 }
