--- a/config/config.json
+++ b/config/config.json
@@ -4,9 +4,11 @@
     "dialect": "sqlite"
   },
   "test": {
+    "storage": "store/test.db",
     "dialect": "sqlite"
   },
   "production": {
+    "use_env_variable": "DATABASE_URL",
     "dialect": "sqlite"
   }
 }
