--- a/config/config.json
+++ b/config/config.json
@@ -8,6 +8,6 @@
     "dialect": "sqlite"
   },
   "production": {
-    "use_env_variable": "DATABASE_URL",
+    "use_env_variable": "DATABASE_URL"
   }
 }
