--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "express-debug": "^1.1.1",
     "express-session": "^1.11.3",
     "flash": "^1.1.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-ng-annotate": "^1.1.0",
+    "gulp-uglify": "^1.4.2",
     "jade": "^1.11.0",
     "lodash": "^3.10.1",
     "morgan": "^1.6.1",
@@ -35,8 +38,10 @@
   "devDependencies": {
     "chai": "^3.4.0",
     "gulp": "^3.9.0",
+    "gulp-istanbul": "^0.10.2",
     "gulp-live-server": "0.0.28",
     "gulp-mocha": "^2.1.3",
+    "istanbul": "^0.4.0",
     "karma": "^0.13.14",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.2.1",
