--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Matthew Meister",
   "license": "ISC",
   "dependencies": {
+    "blueimp-file-upload-expressjs": "^0.4.4",
     "body-parser": "^1.14.0",
     "bower": "^1.5.2",
     "connect-redis": "^3.0.1",
